[CW6]
* AlertManeuver message: always send soft buttons even if an empty array.

[CW5]
* Reduce the app icon size for faster transfer (on Android 2.*).
+ Upload turn left, right, and forward icons after app registration for UpdateTurnList.
* UpdateTurnList dialog: fix the number of soft buttons sent by default, allow to specify image for each turn.
* Don't set app icon for protocol version v1.
* ShowConstantTBT and UpdateTurnList messages: always send soft buttons even if an empty array.
* Properly display subscribed buttons after first HMI status notification.
* ResetGlobalProperties dialog for v1 protocol: hide and don't send VR help title and VR help item properties.
* AlertManeuver message: an array of TTS Chunks can be sent now.
+ Play the realtime audio coming with OnAudioPassThru notifications.
* SyncProxyAndroid SDK: fix getting bulk data from incoming messages.

[CW4]
* Fix a glitch when the app fails to connect over WiFi.
* Put more popular options menu items first.
* SetGlobalProperties dialog for v1 protocol: hide and don't send VR help title and VR help item parameters.
* Fix a crash when sending DialNumber or UpdateTurnList messages.
* Show dialog in non-media app: hide and don't send Media Track and Media Clock parameters.
+ Set app icon after app registration (on first OnHMIStatus notification).
* ShowConstantTBT dialog: allow to customize soft buttons.
+ Create DialNumber and UpdateTurnList dialogs.
* Amend AlertManeuver dialog: remove Maneuver complete checkbox and add customizable Soft Buttons.
* Unify SubscribeVehicleData and UnsubscribeVehicleData dialogs.
+ Alert, Show, ScrollableMessage dialogs: automatically check the Include Soft Buttons checkbox when the user has explicitly set the soft buttons.
* Fix: don't save the edited list of soft buttons when clicked Cancel in the SoftButtons List activity.
* Auto increment soft button id when creating a new one.

[CW3]
* Fix the inability to add 6+ soft buttons on devices with small screens.