@@ -524,9 +524,12 @@ public class SyncProxyTester extends Activity implements OnClickListener {
 	 */
 	private void resetAdapters() {
 		// set up storage for subscription records
-		isButtonSubscribed = new boolean[ButtonName.values().length];
+		// ignoring the last CUSTOM_NAME value
+		List<ButtonName> subscribableButtonNames = Arrays.asList(ButtonName.values()).
+				subList(0, ButtonName.values().length - 1);
+		isButtonSubscribed = new boolean[subscribableButtonNames.size()];
 		_buttonAdapter = new ArrayAdapter<ButtonName>(this,
-				android.R.layout.select_dialog_multichoice, ButtonName.values()) {
+				android.R.layout.select_dialog_multichoice, subscribableButtonNames) {
 			public View getView(int position, View convertView, ViewGroup parent) {
 				CheckedTextView ret = (CheckedTextView) super.getView(position,
 						convertView, parent);
