@@ -1,4 +1,5 @@
 [CW6]
+* ButtonSubscriptions dialog: exclude ButtonName.CUSTOM_NAME value.
 * AlertManeuver message: always send soft buttons even if an empty array.
 
 [CW5]
